--- a/package.json
+++ b/package.json
@@ -1,13 +1,1 @@
-{
-  "name": "dashboard-financeiro",
-  "version": "1.0.0",
-  "type": "module",
-  "dependencies": {
-    "@vercel/postgres": "^0.10.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.3",
-    "pg": "^8.16.3"
-  }
-}
-
-
+{"name":"admin-panel","dependencies":{"cors":"^2.8.5","dotenv":"^17.2.3","express":"^4.19.2","pg":"^8.11.5"}}
